# walastack-rs

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
crates/walastack/: Cargo.toml
crates/walastack-app/: Cargo.toml
crates/walastack-app/src/: lib.rs
crates/walastack-auth/: Cargo.toml
crates/walastack-auth/src/: lib.rs
crates/walastack-cli/: Cargo.toml
crates/walastack-cli/src/: main.rs
crates/walastack-cli/src/templates/basic-web/: Cargo.toml.tpl  README.md.tpl  main.rs.tpl
crates/walastack-db/: Cargo.toml
crates/walastack-db/src/: lib.rs
crates/walastack-http/: Cargo.toml
crates/walastack-http/src/: lib.rs
crates/walastack-jobs/: Cargo.toml
crates/walastack-jobs/src/: lib.rs  sqlite.rs
crates/walastack-llm/: Cargo.toml
crates/walastack-llm/src/: lib.rs
crates/walastack-macros/: Cargo.toml
crates/walastack-macros/src/: lib.rs
crates/walastack-mcp/: Cargo.toml
crates/walastack-mcp/src/: capabilities.rs  config.rs  descriptors.rs  errors.rs  events.rs  inmemory.rs  jsonrpc.rs  lib.rs  plugin.rs  prelude.rs  service.rs  stdio.rs  tests.rs
crates/walastack-mcp/tests/: stdio_integration.rs
crates/walastack-observability/: Cargo.toml
crates/walastack-observability/src/: lib.rs
crates/walastack-openapi/: Cargo.toml
crates/walastack-openapi/src/: lib.rs
crates/walastack-openapi/tests/: handler_integration.rs
crates/walastack-router/: Cargo.toml
crates/walastack-router/src/: lib.rs
crates/walastack-runtime/: Cargo.toml
crates/walastack-runtime/src/: capabilities.rs  context.rs  events.rs  lib.rs  plugins.rs  resources.rs  runtime.rs  scheduler.rs  services.rs  supervision.rs
crates/walastack-service/: Cargo.toml
crates/walastack-service/src/: lib.rs
crates/walastack-test/: Cargo.toml
crates/walastack-test/src/: lib.rs
crates/walastack-web/: Cargo.toml
crates/walastack-web/src/: lib.rs
crates/walastack/src/: lib.rs
examples/hello-auth-db/: Cargo.toml
examples/hello-auth-db-openapi/: Cargo.toml
examples/hello-auth-db-openapi/src/: main.rs
examples/hello-auth-db-openapi/tests/: smoke.rs
examples/hello-auth-db/src/: main.rs
examples/hello-auth-db/tests/: smoke.rs
examples/hello-jobs-only/: Cargo.toml
examples/hello-jobs-only/src/: main.rs
examples/hello-jobs-only/tests/: smoke.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
