[package]
name        = "xtask"
description = "Workspace task runner for walastack-rs (fmt, lint, test, CI, release-prep)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
publish     = false

[lints]
workspace = true

[dependencies]
