[package]
name        = "walastack-app"
description = "User-facing application framework primitive for WalaStack — App, routing, extractors, responders."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
bytes             = { workspace = true }
http              = { workspace = true }
http-body-util    = { workspace = true }
hyper             = { workspace = true }
hyper-util        = { workspace = true }
http-body         = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
walastack-http    = { workspace = true }
walastack-openapi = { workspace = true }
walastack-router  = { workspace = true }
walastack-runtime = { workspace = true }
