[package]
name        = "walastack-http"
description = "HTTP types, body abstractions, and protocol helpers for WalaStack."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
bytes            = { workspace = true }
http             = { workspace = true }
http-body        = { workspace = true }
http-body-util   = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
