[package]
name        = "walastack-macros"
description = "Procedural macros for ergonomic WalaStack development."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
