[package]
name        = "walastack-observability"
description = "ObservabilityService — aggregates Runtime, Service, and Scheduler lifecycle events into a queryable HealthRegistry capability."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
walastack-runtime = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
