[package]
name        = "walastack-runtime"
description = "Tokio-backed runtime integration for WalaStack."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
