[package]
name        = "walastack-test"
description = "Testing utilities for WalaStack applications and framework internals."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true

[dependencies]
bytes             = { workspace = true }
http              = { workspace = true }
walastack-app     = { workspace = true }
walastack-http    = { workspace = true }
walastack-router  = { workspace = true }
walastack-runtime = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
