[package]
name        = "hello-auth-db-openapi"
description = "Tier 2 DX example — extends hello-auth-db with walastack-openapi. Tests whether Tier 1 documentation makes 4-crate composition (db + auth + openapi + http) discoverable."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
publish     = false

[lints]
workspace = true

[dependencies]
walastack         = { workspace = true }
walastack-auth    = { workspace = true }
walastack-db      = { workspace = true }
walastack-http    = { workspace = true }
walastack-openapi = { workspace = true }
walastack-runtime = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
sqlx              = { workspace = true, features = ["sqlite", "runtime-tokio"] }
tracing           = { workspace = true }
http              = { workspace = true }

[dev-dependencies]
walastack-test    = { workspace = true }
tokio             = { workspace = true }
http-body-util    = { workspace = true }
bytes             = { workspace = true }
