[package]
name        = "hello-jobs-only"
description = "Tier 2 DX example — pure Runtime::builder composition with walastack-jobs and no HTTP. Validates the non-App path of the app-vs-runtime guide."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
publish     = false

[lints]
workspace = true

[dependencies]
walastack-jobs    = { workspace = true }
walastack-runtime = { workspace = true }
serde             = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
