[package]
name        = "hello-world"
description = "Minimal walastack-rs example — Hello, WalaStack."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
publish     = false

[lints]
workspace = true

[dependencies]
